--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -4,10 +4,20 @@ on:
   push:
     branches:
       - staging
+      - develop
+      - main
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - staging
+      - develop
+      - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'Development'
 
 jobs:
   build_and_deploy_job:
