--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -58,7 +58,7 @@ jobs:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
     name: Close Pull Request Job
-    environment: ${{ github.event.inputs.environment != '' && github.event.inputs.environment || github.ref_name == 'main' && 'Production' || github.ref_name == 'develop' && 'Development' || github.ref_name == 'staging' && 'Staging' || 'Development' }}
+    environment: ${{ github.ref_name == 'main' && 'Production' || github.ref_name == 'develop' && 'Development' || github.ref_name == 'staging' && 'Staging' || 'Development' }}
     steps:
       - name: Close Pull Request
         id: closepullrequest
