Component generation fix

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:web-components": "node scripts/build-web-components.js",
+    "run:web-components": "http-server dist/web-components -o -S"
   },
   "dependencies": {
     "@azure/msal-browser": "^4.15.0",
