--- a/.github/workflows/azure-component-storage.yml
+++ b/.github/workflows/azure-component-storage.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     environment: ${{ github.ref_name == 'main' && 'Production' || github.ref_name == 'develop' && 'Development' || github.ref_name == 'staging' && 'Staging' || 'Development' }}
     steps:
     - uses: actions/checkout@v3
@@ -23,10 +24,11 @@ jobs:
     - name: Build
       run: npm run build:web-components
     - uses: azure/login@v2
+      
       with:        
-        client-id: ${{ secrets.AZURE_CLIENT_ID_STORAGE }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        client-id: ${{ vars.AZURE_CLIENT_ID_STORAGE }}
+        tenant-id: ${{ vars.AZURE_TENANT_ID }}
+        subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
     - name: Upload JS to blob storage
       uses: azure/CLI@v1
