--- a/.github/workflows/azure-component-storage.yml
+++ b/.github/workflows/azure-component-storage.yml
@@ -30,7 +30,12 @@ jobs:
         tenant-id: ${{ vars.AZURE_TENANT_ID }}
         subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
-
+    - name: Azure CLI script
+      uses: azure/cli@v2
+      with:
+        azcliversion: latest
+        inlineScript: |
+            az account show
     - name: Upload JS to blob storage
       uses: azure/CLI@v2
       with:
