--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -57,6 +57,7 @@ jobs:
         env:
           VITE_CRM_API_BASE_URL: ${{ vars.CRM_API_BASE_URL }}
           VITE_AI_API_BASE_URL: ${{ vars.AI_API_BASE_URL }}
+          VITE_MARKET_DALI_API_BASE_URL: ${{ vars.MARKET_DALI_API_BASE_URL }}
           VITE_TEMPLATES_API_BASE_URL: ${{ vars.TEMPLATES_API_BASE_URL }}
           VITE_MAESTRO_API_BASE_URL: ${{ vars.MAESTRO_API_BASE_URL }}
           VITE_AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
