user info url added to github workflow

--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -65,6 +65,7 @@ jobs:
           VITE_AZURE_AUTHORITY: ${{ vars.AZURE_AUTHORITY }}
           VITE_ENTRA_TENANT_NAME: ${{ vars.ENTRA_TENANT_NAME }}
           VITE_REQUIRED_SCOPES: ${{ vars.ENTRA_REQUIRED_SCOPES }}
+          VITE_USER_INFO_URL: ${{ vars.USER_INFO_URL }}
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
