--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "run:web-components": "http-server dist/web-components -o -S"
   },
   "dependencies": {
-    "@azure/msal-browser": "^4.15.0",
+    "@azure/msal-browser": "^4.25.0",
     "@azure/msal-react": "^3.0.15",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -59,6 +59,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
+    "fetch-intercept": "^2.4.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
