--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,10 +1,6 @@
 {
   "routes": [
     {
-      "route": "/api/*",
-      "allowedRoles": ["authenticated"]
-    },
-    {
       "route": "/assets/*",
       "headers": {
         "cache-control": "max-age=31536000"
@@ -12,12 +8,13 @@
     },
     {
       "route": "/*",
-      "serve": "/index.html",
-      "statusCode": 200
+      "allowedRoles": ["anonymous"],
+      "rewrite": "/index.html"
     }
   ],
   "navigationFallback": {
-    "rewrite": "/index.html"
+    "rewrite": "/index.html",
+    "exclude": ["/static/*", "/assets/*"]
   },
   "responseOverrides": {
     "401": {
@@ -29,12 +26,12 @@
       "statusCode": 302
     },
     "404": {
-      "serve": "/index.html",
-      "statusCode": 200
+      "rewrite": "/index.html"
     }
-},
+  },
   "globalHeaders": {
     "X-Content-Type-Options": "nosniff",
+    "Cache-Control": "max-age=0, no-cache, no-store, must-revalidate",
     "X-Frame-Options": "DENY",
     "X-XSS-Protection": "1; mode=block",
     "Referrer-Policy": "strict-origin-when-cross-origin",
@@ -54,11 +51,5 @@
     ".jpeg": "image/jpeg",
     ".woff": "font/woff",
     ".woff2": "font/woff2"
-  },
-  "platform": {
-    "apiRuntime": "node:18"
-  },
-  "networking": {
-    "allowedIpRanges": []
   }
 }
