--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "run:web-components": "http-server dist/web-components -o -S -c-1 --ssl --cert .certs/cert.pem --key .certs/key.pem"
   },
   "dependencies": {
-    "@azure/msal-browser": "^4.25.0",
-    "@azure/msal-react": "^3.0.15",
+    "@azure/msal-browser": "^4.26.2",
+    "@azure/msal-react": "^3.0.22",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -66,33 +66,33 @@
     "botframework-webchat": "^4.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.15.1",
     "fetch-intercept": "^2.4.0",
     "framer-motion": "^12.23.24",
-    "input-otp": "^1.2.4",
+    "input-otp": "^1.4.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "powerbi-client": "^2.23.1",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.1",
+    "react-day-picker": "^9.11.3",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^6.26.2",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "swiper": "^12.0.3",
+    "react-router-dom": "^6.30.2",
+    "recharts": "^3.5.1",
+    "sonner": "^2.0.7",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
-    "vaul": "^0.9.3",
+    "vaul": "^1.1.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
   },
@@ -100,8 +100,8 @@
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -110,8 +110,17 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "overrides": {
+    "adaptivecards": "^3.0.5",
+    "react-remove-scroll": "^2.7.2",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "botframework-webchat": {
+      "swiper": "^11.1.14"
+    }
   }
 }
